--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     --alpha-color: rgba(0, 0, 0, 0.5);
     --shadow: 0 15px 40px var(--alpha-color);
 }
+/*루트설정*/
 
 html{
     background: var(--background);
@@ -35,7 +36,7 @@ body{
     display: none;
 }
 
-/* home section */
+
 
 .home-section{
     width: 100%;
@@ -43,15 +44,15 @@ body{
     height: 100%;
     padding-top: 50px;
     padding-bottom: 100px;
-    overflow-y: auto;
+    overflow-y: auto; /*아랫부분이 잘리면 스크롤 생김*/
 }
 
-/* carousel */
+
 
 .carousel{
     width: 100%;
     height: 80%;
-    overflow: hidden;
+    overflow: hidden;/*내용이 잘림*/
     border-radius: 20px;
     box-shadow: var(--shadow);
     position: relative;
@@ -61,7 +62,7 @@ body{
     position: absolute;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: cover;/*가로세로비 불일치시 잘림*/
     opacity: 0;
     transition: 1s;
 }
@@ -69,10 +70,11 @@ body{
 .carousel img.active{
     opacity: 1;
 }
+/*위에 두가지 css 스타일로 인하여 사진이 보여짐*/
 
 .heading{
     margin: 30px 0 10px;
-    text-transform: capitalize;
+    text-transform: capitalize;/*첫번째 문자 대문자로 바꾸줌*/
     font-weight: 400;
     font-size: 30px;
 }
@@ -95,18 +97,15 @@ body{
     left: -100%;
     padding: 30px 0;
     background: var(--background);
-    z-index: 3;
+    z-index: 3;/*섹션의 높이*/
     transition: 1s;
-    overflow: auto;
+    overflow: auto;/*컨텐츠가 많을시 스크롤바 생김*/
 }
 
 .login-section.active{
-    left: 0;
+    left: 0;/* -100%에서 0 으로되면서 나옴*/
 }
 
-
-
-/* playlists card */
 
 .playlists-group{
     position: relative;
@@ -119,7 +118,7 @@ body{
 }
 
 .playlist-card{
-    flex: 0 0 auto;
+    flex: 0 0 auto; /* == none width와 height에따라 아이크기 조*/
     max-width: 150px;
     height: 100%;
     margin-right: 20px;
@@ -134,7 +133,7 @@ body{
 
 .playlist-card-name{
     width: 100%;
-    text-align: justify;
+    text-align: justify;/*양쪽정렬*/
     font-size: 20px;
     text-transform: capitalize;
     padding: 5px;
@@ -294,7 +293,6 @@ body{
     right: 40px;
 }
 
-/* volume button */
 
 .volume-slider{
     -webkit-appearance: none;
